// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notie /> confirm Consecutive calls do not work 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-overlay"
    />
    <div
      className="notie-container notie--top notie--active notie--confirm"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Are you sure?
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
        <button
          className="notie-btn notie-btn--cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm Consecutive calls do not work 2`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-overlay"
    />
    <div
      className="notie-container notie--top notie--active notie--confirm"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Are you sure?
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
        <button
          className="notie-btn notie-btn--cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm Custom button text 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-overlay"
    />
    <div
      className="notie-container notie--top notie--active notie--confirm"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Are you sure?
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          Hell Yeah!
        </button>
        <button
          className="notie-btn notie-btn--cancel"
          onClick={[Function]}
        >
          Fuck NO!
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm Rejects on negative feedback 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--confirm"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Are you sure?
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
        <button
          className="notie-btn notie-btn--cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm Resolves on postive feedback 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--confirm"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Are you sure?
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
        <button
          className="notie-btn notie-btn--cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm initial render 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-overlay"
    />
    <div
      className="notie-container notie--top notie--active notie--confirm"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Are you sure?
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
        <button
          className="notie-btn notie-btn--cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> consecutive calls 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--active notie--info"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Info!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> consecutive calls 2`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--active notie--error"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Error!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> dismiss on click 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--active notie--info"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Info!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> dismiss on click 2`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--info"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Info!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> error message 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--active notie--error"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Error!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> error message 2`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--error"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Error!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> force Consecutive calls do not work 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-overlay"
    />
    <div
      className="notie-container notie--top notie--active notie--force"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        You have done it again!
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> force Consecutive calls do not work 2`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-overlay"
    />
    <div
      className="notie-container notie--top notie--active notie--force"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        You have done it again!
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> force Custom button text 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-overlay"
    />
    <div
      className="notie-container notie--top notie--active notie--confirm"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Are you sure?
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          Hmmm OK?
        </button>
        <button
          className="notie-btn notie-btn--cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> force Resolves on feedback 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--force"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        You have done it again!
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> force initial render 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-overlay"
    />
    <div
      className="notie-container notie--top notie--active notie--force"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        You have done it again!
      </div>
      <div
        className="notie-choices"
      >
        <button
          className="notie-btn notie-btn--ok"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> info message 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--active notie--info"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Info!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> info message 2`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--info"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Info!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> initial render 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--info"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      />
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> success message 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--active notie--success"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Success!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> success message 2`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--success"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Success!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> warn message 1`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--active notie--warn"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Warn!
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> warn message 2`] = `
<Notie>
  <div
    className="notie"
  >
    <div
      className="notie-container notie--top notie--warn"
      onClick={[Function]}
    >
      <div
        className="notie-message"
      >
        Warn!
      </div>
    </div>
  </div>
</Notie>
`;
